--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,124 @@
 .container {
 	padding: 1rem 1rem;
 }
+
+.loadingWrapper {
+	display: flex;
+	justify-content: center;
+}
+
+.loading {
+	padding: 1rem 1rem;
+	font-weight: 600;
+	border: none;
+	cursor: not-allowed;
+	border-radius: 3px;
+	background-color: var(--lime);
+	color: black;
+	text-align: center;
+	user-select: none;
+	width: 12%;
+}
+
+.listingWrapper {
+	display: grid;
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+	grid-gap: 1rem;
+	margin-top: 1rem;
+
+	/* Small Screen */
+	@media screen and (min-width: 640px) {
+		grid-template-columns: repeat(1, minmax(0, 1fr));
+	}
+
+	/* Medium Screen */
+	@media screen and (min-width: 768px) {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	/* Large Screen */
+	@media screen and (min-width: 1024px) {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+}
+
+.listing {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	border: 2px solid var(--lime);
+	align-items: center;
+	cursor: pointer;
+	padding: 1rem 1rem;
+	border-radius: 5px;
+	background-color: var(--space);
+	color: var(--gray);
+	transition: all;
+	transition-duration: 0.2s;
+	transition-timing-function: ease-in-out;
+}
+
+.listing:hover {
+	transform: scale(1.05);
+	color: var(--space);
+	background-color: var(--lime);
+}
+
+.listing:hover h2 {
+	color: var(--space);
+}
+
+.listing:hover span {
+	color: var(--space);
+}
+
+.listing:hover .listingTypeWrapper {
+	color: var(--gray);
+	background-color: var(--space);
+}
+
+.mediaWrapper {
+	display: flex;
+	flex: 1;
+	align-items: center;
+}
+
+.media {
+	width: 13rem;
+}
+
+.infoWrapper {
+	padding-top: 0.25rem;
+}
+
+.heading {
+	font-weight: 600;
+}
+
+.description {
+	font-size: small;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
+.price {
+	font-weight: 700;
+	color: var(--lime);
+	margin-right: 3px;
+}
+
+.listingTypeWrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--lime);
+	color: var(--space);
+	border-radius: 7px;
+}
+
+.listingType {
+	font-size: large;
+	font-weight: 700;
+}
