--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,21 @@ body {
 	font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	background: var(--space);
+	color: var(--gray);
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: var(--lime);
 }
 
 /* * {
