--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,6 +56,7 @@
 	transition: all;
 	transition-duration: 0.2s;
 	transition-timing-function: ease-in-out;
+	user-select: none;
 }
 
 .listing:hover {
@@ -98,7 +99,7 @@
 .description {
 	font-size: small;
 	display: -webkit-box;
-	-webkit-line-clamp: 2;
+	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
 	overflow: hidden;
 }
