--- a/styles/Create.module.css
+++ b/styles/Create.module.css
@@ -18,8 +18,19 @@
 	font-style: italic;
 }
 
+.formWrapper {
+	padding-top: 5rem;
+	display: flex;
+	gap: 1rem;
+}
+
 .form {
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+}
+
+.preview {
+	width: 25rem;
 }
