--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,42 @@
 	padding: 1rem 1rem;
 }
 
+.hero {
+	height: 100vh;
+	display: flex;
+}
+
+.heroWrapper {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	align-items: flex-start;
+	padding: 5rem 3rem;
+}
+
+.heroImage {
+	height: 100vh;
+	margin-top: -9rem;
+}
+
+.heroButton {
+	width: 13rem;
+	border-radius: 5rem;
+	padding: 1rem 2rem;
+	font-weight: bold;
+}
+
+.heading {
+	font-size: 3.375rem;
+	font-weight: 600;
+	line-height: 68px;
+}
+
+.main {
+	margin-top: -50px;
+	padding: 0rem 3rem;
+}
+
 .loadingWrapper {
 	display: flex;
 	justify-content: center;
@@ -22,7 +58,7 @@
 
 .listingWrapper {
 	display: grid;
-	grid-template-columns: repeat(4, minmax(0, 1fr));
+	grid-template-columns: repeat(3, minmax(0, 1fr));
 	grid-gap: 1rem;
 	margin-top: 1rem;
 
@@ -85,7 +121,7 @@
 }
 
 .media {
-	width: 13rem;
+	width: 15rem;
 }
 
 .infoWrapper {
@@ -112,6 +148,7 @@
 }
 
 .listingTypeWrapper {
+	flex: 1;
 	display: flex;
 	align-items: center;
 	justify-content: center;
