--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ body {
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	background: var(--space);
 	color: var(--gray);
+	scroll-behavior: smooth;
 }
 
 a {
